@@ -3,7 +3,7 @@
 techtree.olupis = Olupis
 
 block.olupis-mossy-boulder.description = Funky little rock that shows history of its surrounding
-block.olupis-mossy-boulder.details = A rogue nuclear weapon launched from Erekir struck something invisible in the orbit just beyond Serpulo's whatever device that was keeping this entire planet invisible was taken down. Records from the Fifth Era show this planet was called "Olupis" And was seeded by an ancient alien race, the same race that also seeded Serpulo before we arrived and long before the Seeding event
+block.olupis-mossy-boulder.details = A rogue nuclear weapon launched from Erekir struck something invisible in the orbit just beyond Serpulo's whatever device that was keeping this entire planet invisible was taken down. Records from the Fifth Era show this planet was called "Olupis" And was nourished by an ancient alien race, the same race that also seeded Serpulo before we arrived and long before the Seeding event
 block.olupis-mossy-boulder.name = Mossy Boulder
 
 block.olupis-garden.description = Uses a lot of power, water and biological lifeforms of the tiles it's on for creation and condensation of biomatter into industrial pods for use
