@@ -1,4 +1,7 @@
-apply plugin: "java"
+plugins {
+    id 'java'
+    id("fr.xpdustry.toxopid") version "3.0.0"
+}
 
 version '1.0'
 
@@ -17,6 +20,13 @@ ext{
     mindustryVersion = 'v141'
     jabelVersion = "93fde537c7"
     sdkRoot = System.getenv("ANDROID_HOME") ?: System.getenv("ANDROID_SDK_ROOT")
+}
+
+import fr.xpdustry.toxopid.spec.ModPlatform
+toxopid {
+    compileVersion.set("$mindustryVersion")
+    runtimeVersion.set("$mindustryVersion")
+    platforms.add(ModPlatform.DESKTOP)
 }
 
 //java 8 backwards compatibility flag
